added access token config input

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
             "label": "Redirect URI",
             "description": "Redirect URI to register on your application",
             "type": "label",
-            "value": "config.SERVER_URL+ '/callback'"
+            "value": "config.SERVER_URL+ '/runtime/callback'"
         },
         {
             "name": "clientId",
