--- a/package.json
+++ b/package.json
@@ -74,11 +74,12 @@
     "metadata": [
         {
             "type": "script",
-            "namespace": "functions",
-            "path": "/scripts/functions.js"
+            "namespace": "api",
+            "path": "/scripts/api.js"
         },
         {
             "type": "listener",
+            "namespace": "listeners",
             "path": "/listeners/listeners.js"
         },
         {
